--- a/.env.dist
+++ b/.env.dist
@@ -6,5 +6,6 @@ ENV=dev
 PHP_APACHE_VERSION=7.3-apache
 # Local development
 DEV_SUBNET_PREFIX=172.20.1
+TYPO3_HOSTNAME=typo3.localhost
 ###< Docker ###
 
