--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,8 +24,8 @@ services:
 #    ports:
 #      - "80:80"
 #    extra_hosts:
-#      - "entega.localhost:${DEV_SUBNET_PREFIX}.3"
-#      - "api.entega.localhost:${DEV_SUBNET_PREFIX}.3"
+#      - "entega.docker:${DEV_SUBNET_PREFIX}.3"
+#      - "api.entega.docker:${DEV_SUBNET_PREFIX}.3"
 #    #    environment:
 #    #      XDEBUG_CONFIG: "remote_host=${MARIADB_VERSION}.1"
 #    #      PHP_IDE_CONFIG: "serverName=docker-ent"
