MariaDB service added.

--- a/.env.dist
+++ b/.env.dist
@@ -3,9 +3,14 @@
 PROJECT_KEY=typo3
 ENV=dev
 # Docker service versions
+MARIADB_VERSION=10.1
 PHP_APACHE_VERSION=7.3-apache
+# MySQL
+MYSQL_ROOT_PASSWORD=pass
+MYSQL_DATABASE=typo3
+MYSQL_USER=typo3
+MYSQL_PASSWORD=typo3
 # Local development
 DEV_SUBNET_PREFIX=172.20.1
 TYPO3_HOSTNAME=typo3.docker
 ###< Docker ###
-
