Copying typo3 source files into container.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 .env
-typo3_src-*
+docker/mariadb/data
+docker/php-apache/typo3_src-*
 src/public/index.php
 src/public/typo3
 src/public/typo3_src
 src/public/FIRST_INSTALL
+typo3_src-*
 
 # Project specific IDE settings
 .idea
+
