--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./docker/mariadb/init:/docker-entrypoint-initdb.d
       - ./docker/mariadb/data:/var/lib/mysql
+    command: ['mysqld', '--character-set-server=utf8', '--collation-server=utf8_general_ci']
     environment:
       MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
       MYSQL_DATABASE: "${MYSQL_DATABASE}"
@@ -26,8 +27,6 @@ services:
     build: ./docker/php-apache
     restart: always
     volumes:
-      - ./src/public:/var/www/html
-      - ./typo3_src-8.7.32:/var/www/typo3_src
       - ./docker/php-apache/php/php-ini-overrides.ini:/usr/local/etc/php/conf.d/99-overrides.ini
     extra_hosts:
       - "${TYPO3_HOSTNAME}:${DEV_SUBNET_PREFIX}.3"
